--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js"></script>
+
     <h1 class="bumper">Coming Soon</h1>
+    <button id="toggle" onclick="toggleState()">Click Me!</button>
 </body>
 </html>
